Kubernetes_Ingrass-2Tier_two-architecture/K8S/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app-backend
  template:
    metadata:
      labels:
        app: chat-app-backend
    spec:
      containers:
      - name: chat-app-backend
        image: 339712702685.dkr.ecr.us-east-1.amazonaws.com/chat-app-backend:latest
        ports:
        - containerPort: 3001
