Kubernetes_Ingrass-2Tier_two-architecture/K8S/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app-frontend
  template:
    metadata:
      labels:
        app: chat-app-frontend
    spec:
      containers:
      - name: chat-app-frontend
        image: 339712702685.dkr.ecr.us-east-1.amazonaws.com/chat-app-frontend:latest
        ports:
        - containerPort: 80
