Kubernetes_Ingrass-2Tier_two-architecture/K8S/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-backend
spec:
  selector:
    app: chat-app-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
