Kubernetes_Ingrass-2Tier_two-architecture/K8S/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-frontend
spec:
  selector:
    app: chat-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
