Kubernetes_Ingrass-2Tier_two-architecture/K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - your-domain.com
    secretName: chat-app-tls
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: chat-app-backend
            port: 
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-app-frontend
            port: 
              number: 80
